@@ -42,7 +42,7 @@ S: Maintained: hidparser, newhidups, hidups, mge-shut, mge-utalk,
 
 P: Arjen de Korte
 M: arjen@de-korte.org
-S: Maintained: safenet
+S: Maintained: safenet, genericups
 
 P: Fabio Di Niro
 M: blaxwan@users.sourceforge.net
